# HEATDesalination

./: .gitignore  .pylintrc  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  Design Specification.md  Functional Specification.md  LICENSE  NOTICE.md  README.md  evacuated_tube_datasheet.csv  flat_plate_datasheet.csv  mypy.ini  plotter.py  requirements.txt  setup.cfg  solar_thermal_collectors.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  mypy.yml  pylint.yml  pytest.yml
docs/: _config.yml
inputs/: bfgs_tests.json  cheap_pv_t_grid_optimisations.json  default_scenarios.yaml  ecos_optimisations.json  ecos_optimisations_07_mar_23.json  fifty_by_fifth_simulations.json  grid_optimisations.json  heat_pumps.yaml  no_pv_pv_t_st_square_simulations.json  optimisations.json  optimisations.yaml  optimisations_28_feb_23.json  optimisations_ecos.json  optimisations_ecos_1.json  optimisations_ecos_2.json  optimisations_heat_exchanger_efficiency.json  optimisations_heat_pump_efficiency.json  optimisations_inverter_battery_only.json  optimisations_pv_degradation.json  optimisations_two_test.json  plants.yaml  pumps.yaml  pv_batt_square.json  pv_batt_square_200_x_200.json  pv_batt_square_low_pvt_st_simulations.json  pv_batt_square_simulations.json  pv_degradation_optimisations.json  pv_pv_t_square_simulations.json  pv_st_square_simulations.json  pv_t_batt_square_simulations.json  pv_t_st_square_simulations.json  scenarios.json  scenarios.yaml  scenarios_ecos_1.json  scenarios_ecos_2.json  simulations.json  simulations_old.json  solar.yaml  solar_collectors.yaml  solar_with_error.yaml  (+4 more)
simulation_outputs/: simulation_output.csv  simulation_output_average_weather_conditions.csv  simulation_output_maximum_irradiance_weather_conditions.csv  simulation_output_minimum_irradiance_weather_conditions.csv
src/heatdesalination/: __init__.py  __main__.py  __utils__.py  argparser.py  assessor.py  fileparser.py  heat_pump.py  hpc_launch_script.py  hpc_wrapper.py  matrix.py  optimiser.py  parallel_optimiser.py  parallel_simulator.py  plant.py  simulator.py  (+3 more)
(+5 files in other folders)
