[metadata]
name = heatdesalination
version = 1.0.0a1
author = Ben Winchester
author_email = benedict.winchester@gmail.com
description = Hybrid Electric and Heat Desalination Model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BenWinchester/HEATDesalination
project_urls =
    Bug Tracker = https://github.com/BenWinchester/HEATDesalination/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    black >=22.10
    mypy >= 0.982
    pylint >= 2.15.4
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    heatpanel = heatdesalination.scripts.heatdesalination:main

[options.packages.find]
where = src