[metadata]
name = heat-desalination
version = 1.0.0b1
author = Ben Winchester,Jenny Nelson, Christos N. Markides
author_email = benedict.winchester@gmail.com,jenny.nelson@imperial.ac.uk,c.markides@imperial.ac.uk
description = Hybrid Electric And Thermal Desalination
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BenWinchester/HEATDesalination
project_urls =
    Bug Tracker = https://github.com/BenWinchester/HEATDesalination/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    numpy >=1.23.4
    pandas >=1.5.1
    PyYAML >=6.0
    requests >=2.28.1
    scipy >=1.9.3
    seaborn >=0.12.1
    tqdm >=4.64.1
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.entry_points]
console_scripts =
    heatdesalination = heatdesalination.scripts.heatdesalination:main
    heatdesalination-hpc = heatdesalination.scripts.hpc:main
    heatdesalination-parallel-optimiser = heatdesalination.scripts.parallel_oprimiser:main

[options.packages.find]
where = src
